tests/reject/mnamspc2.nim
# export an identifier:
var
  global*: Int
